# jaxtari-blines

./: README.md  inspection_script.py  main.py  pyproject.toml  run_multiple_exp.py
agents/c51/: c51.py  c51_eval.py
agents/cjepa/: action_encoder.py  cjepa.py  data.py  decoder.py  eval.py  predictor.py  slot_encoder.py  train.py  transformer.py  viz_rollout.py
agents/crossq/: crossq.py
agents/ddpg/: ddpg.py
agents/dqn/: dqn.py  dqn_eval.py  types.py
agents/ppo/: ppo.py  ppo_eval.py
agents/pqn/: pqn.py  pqn_eval.py
config/: config.yaml
config/alg/: c51_oc_original.yaml  c51_oc_tuned.yaml  c51_rgb_original.yaml  c51_rgb_tuned.yaml  cjepa_pong.yaml  crossq_oc.yaml  crossq_oc_original.yaml  crossq_rgb.yaml  crossq_rgb_original.yaml  ddpg_oc.yaml  ddpg_oc_original.yaml  ddpg_oc_tuned.yaml  ddpg_rgb.yaml  ddpg_rgb_original.yaml  ddpg_rgb_tuned.yaml  dqn.yaml  dqn_oc_original.yaml  dqn_oc_tuned.yaml  dqn_rgb_original.yaml  dqn_rgb_tuned.yaml  ppo_oc.yaml  ppo_rgb.yaml  pqn_oc_original.yaml  pqn_oc_tuned.yaml  pqn_rgb_original.yaml  pqn_rgb_tuned.yaml
reward_machines/: reward_machine.py  reward_machine_wrapper.py  rm_registry.py  test_rm.py
reward_machines/games/: game_rm.py  pong_rm.py  seaquest.py  seaquest_claude.py  utils.py
